Correction CRUD + début de logique métier
