# go/docs/swagger.yaml
@@ -2,6 +2,15 @@ definitions:
   gin.H:
     additionalProperties: {}
     type: object
+  models.Jetons:
+    properties:
+      id:
+        type: integer
+      nb_jetons:
+        type: integer
+      price:
+        type: number
+    type: object
   models.Kermesse:
     properties:
       id:
@@ -19,7 +28,6 @@ definitions:
           $ref: '#/definitions/models.User'
         type: array
       stands:
-        description: 'Relations One-to-Many : Une kermesse a plusieurs stands'
         items:
           $ref: '#/definitions/models.Stand'
         type: array
@@ -32,6 +40,8 @@ definitions:
   models.Product:
     properties:
       id:
+        type: integer
+      jetons_requis:
         type: integer
       name:
         type: string
@@ -51,11 +61,12 @@ definitions:
         type: integer
       id:
         type: integer
-      kermesse:
-        $ref: '#/definitions/models.Kermesse'
-      kermesse_id:
-        description: Relations avec la kermesse et le gestionnaire du stand (User)
+      jetons_requis:
         type: integer
+      kermesses:
+        items:
+          $ref: '#/definitions/models.Kermesse'
+        type: array
       name:
         type: string
       pts_donnees:
@@ -74,14 +85,16 @@ definitions:
     type: object
   models.Transaction:
     properties:
+      Quantity:
+        type: integer
       date_transaction:
         type: string
       id:
         type: integer
-      nb_jetons:
-        type: integer
       price:
         type: number
+      type:
+        type: string
       user:
         allOf:
         - $ref: '#/definitions/models.User'
@@ -205,6 +218,12 @@ paths:
       - application/json
       description: Crée un nouvel utilisateur avec les informations fournies
       parameters:
+      - default: Bearer Add access token here
+        description: Insert your access token
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - description: Utilisateur à créer
         in: body
         name: user
@@ -222,6 +241,8 @@ paths:
           description: Erreur serveur interne
           schema:
             $ref: '#/definitions/gin.H'
+      security:
+      - Bearer: []
       summary: Crée un nouvel utilisateur
       tags:
       - User
@@ -334,6 +355,40 @@ paths:
       summary: Met à jour un utilisateur par ID
       tags:
       - User
+  /create-jeton:
+    post:
+      consumes:
+      - application/json
+      description: Crée un nouveau jeton
+      parameters:
+      - default: Bearer Add access token here
+        description: Insert your access token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: Jeton à créer
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/models.Jetons'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Jetons'
+        "500":
+          description: Erreur serveur interne
+          schema:
+            $ref: '#/definitions/gin.H'
+      security:
+      - Bearer: []
+      summary: Crée un nouveau jeton
+      tags:
+      - Jeton
   /create-kermesse:
     post:
       consumes:
@@ -422,7 +477,7 @@ paths:
     post:
       consumes:
       - application/json
-      description: Crée un nouveau stand avec les informations fournies
+      description: Permet d'interagir avec un stand en échange de jetons
       parameters:
       - default: Bearer Add access token here
         description: Insert your access token
@@ -449,9 +504,113 @@ paths:
             $ref: '#/definitions/gin.H'
       security:
       - Bearer: []
-      summary: Crée un nouveau stand
+      summary: Interagir avec un stand
       tags:
       - Stand
+  /jetons:
+    get:
+      description: Récupère la liste de tous les jetons
+      parameters:
+      - default: Bearer Add access token here
+        description: Insert your access token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.Jetons'
+            type: array
+        "500":
+          description: Erreur serveur interne
+          schema:
+            $ref: '#/definitions/gin.H'
+      security:
+      - Bearer: []
+      summary: Récupère tous les jetons
+      tags:
+      - Jeton
+  /jetons/{id}/delete:
+    delete:
+      description: Supprime un jeton spécifique
+      parameters:
+      - default: Bearer Add access token here
+        description: Insert your access token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: ID du jeton
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: No Content
+        "404":
+          description: Jeton non trouvé
+          schema:
+            $ref: '#/definitions/gin.H'
+        "500":
+          description: Erreur serveur interne
+          schema:
+            $ref: '#/definitions/gin.H'
+      security:
+      - Bearer: []
+      summary: Supprime un jeton par ID
+      tags:
+      - Jeton
+  /jetons/{id}/update:
+    put:
+      consumes:
+      - application/json
+      description: Met à jour les informations d'un jeton spécifique
+      parameters:
+      - default: Bearer Add access token here
+        description: Insert your access token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: ID de l'utilisateur
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Utilisateur à mettre à jour
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/models.Jetons'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Jetons'
+        "404":
+          description: Jeton non trouvé
+          schema:
+            $ref: '#/definitions/gin.H'
+        "500":
+          description: Erreur serveur interne
+          schema:
+            $ref: '#/definitions/gin.H'
+      security:
+      - Bearer: []
+      summary: Met à jour un jeton par ID
+      tags:
+      - Jeton
   /kermesses:
     get:
       consumes:
@@ -707,6 +866,41 @@ paths:
       summary: Logout
       tags:
       - Auth
+  /payment:
+    post:
+      consumes:
+      - application/json
+      description: Crée une intention de paiement pour que les parents puissent acheter
+        des jetons
+      parameters:
+      - default: Bearer Add access token here
+        description: Insert your access token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: Paiement des jetons
+        in: body
+        name: stand
+        required: true
+        schema:
+          $ref: '#/definitions/models.Jetons'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Jetons'
+        "500":
+          description: Erreur serveur interne
+          schema:
+            $ref: '#/definitions/gin.H'
+      security:
+      - Bearer: []
+      summary: Crée une intention de paiement pour les jetons
+      tags:
+      - Payment
   /products:
     get:
       description: Récupère la liste de tous les produits
@@ -1058,4 +1252,60 @@ paths:
       summary: Met à jour un stand par ID
       tags:
       - Stand
+  /students:
+    get:
+      description: Récupère la liste de tous les utilisateurs
+      parameters:
+      - default: Bearer Add access token here
+        description: Insert your access token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.User'
+            type: array
+        "500":
+          description: Erreur serveur interne
+          schema:
+            $ref: '#/definitions/gin.H'
+      security:
+      - Bearer: []
+      summary: Récupère tous les utilisateurs avec le rôle d'élève
+      tags:
+      - Student
+  /transactions:
+    get:
+      description: Récupère la liste de toutes les transactions
+      parameters:
+      - default: Bearer Add access token here
+        description: Insert your access token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.Transaction'
+            type: array
+        "500":
+          description: Erreur serveur interne
+          schema:
+            $ref: '#/definitions/gin.H'
+      security:
+      - Bearer: []
+      summary: Récupère toutes les transactions faites par le user
+      tags:
+      - Transactions
 swagger: "2.0"
