# go/internal/models/transactionModel.go
@@ -4,9 +4,10 @@ import "time"
 
 type Transaction struct {
 	ID              uint      `gorm:"primary_key; not null; autoIncrement" json:"id"`
+	Type            string    `gorm:"not null" json:"type"`
 	DateTransaction time.Time `gorm:"not null" json:"date_transaction"`
 	Price           float32   `gorm:"default:0; not null;" json:"price"`
-	Nb_Jetons       uint      `gorm:"default:0; not null" json:"nb_jetons"`
+	Quantity        uint      `gorm:"default:0; not null" json:"Quantity"`
 
 	// Relations avec l'utilisateur
 	UserID uint `gorm:"not null" json:"user_id"`       // Clé étrangère
